--- a/!_lessons/28. NGRX-5. resolver, actions, effect для posts-страницы.md
+++ b/!_lessons/28. NGRX-5. resolver, actions, effect для posts-страницы.md
@@ -1,6 +1,6 @@
 ## 28. resolver, actions, effect для posts-страницы
 
-На данный момент, **при каждом переходе на страницу *posts*, происходит обращение к серверу**, чтобы получить данные всех постов. Такая логика является не правильной, поскольку пользователь, находясь на странице *posts*, может переходить с неё на страницу выбранного поста и возвращаться обратно назад много раз, что будет приводить к большой нагрузке на сервер. Чтобы исправить такое поведение, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера данные в *store*, и при всех последующих переходах, считывать данные из *store*.
+На данный момент, **при каждом переходе на страницу *posts*, происходит обращение к серверу** из home-компонента, чтобы получить данные всех постов. Такая логика является ресурсо-затратной, поскольку пользователь, находясь на странице *posts*, может переходить с неё на страницу выбранного поста и возвращаться обратно назад много раз, что будет приводить к большой нагрузке на сервер. Чтобы исправить такое поведение, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера данные в *store*, и при всех последующих переходах, считывать данные из *store*. Данная задача будет реализована в разделе NGRX-5.
 
 ### 1. Создание 'router resolver' сервиса (часть 1)
 
