--- a/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
+++ b/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
@@ -1,8 +1,6 @@
-## 30. Извлечение постов с помощью selectors 
+## 30. Извлечение постов из store с помощью selectors 
 
-Как было описанно ранее в уроке 28, нам необходимо после первого перехода на страницу *posts*, сохранить полученные от сервера посты (*src\app\posts\posts.effects.ts*) в *store*, и при всех последующих переходах, считывать данные из *store*.        
-
-Вместо того, чтобы каждый раз использовать HTTP-сервисы для получения постов от сервера, когда в store уже хранятся эти данные, мы будем использовать селекторы, с помощью которых мы будем получать посты из store.
+Раннее, при отображении всех постов на странице *posts*, внутри home-компонента происходил HTTP-запрос к серверу. Так как в предыдущем уроке мы уже реализовали логику сохранения постов внутри store, то сейчас мы можем избавиться от HTTP-запросов, а получать данные из store. Для этого нам потребуются селекторы.
 
 ### 1. Создание селекторов 
 
