--- a/!_lessons/31. NGRX-5. .md
+++ b/!_lessons/31. NGRX-5. .md
@@ -1,24 +1,23 @@
 ## 31. Загрузка данных только если нужно
 
-Напомним, что задача раздела NGRX-5 - реализовать следующую логику:
-1. избавится от постоянных запросов к серверу из home-компонента при переходе на страницу *posts*
-2. после первого перехода на страницу *posts* - выполнять обращение к серверу, чтобы получить данные
-3. сохранить полученные от сервера данные в *store*
-4. при всех последующих переходах на страницу *posts*, home-компонент считывает данные из *store*, без обращения к серверу
+Напомним, что задача раздела NGRX-5 - реализовать следующую логику:  
+**1.** Выполнять обращение к серверу, чтобы получить данные, только один раз, после первого перехода на страницу *posts*   
+**2.** Сохранить полученные от сервера данные в *store*   
+**3.** При всех последующих переходах на страницу *posts*, home-компонент считывает данные из *store*, без обращения к серверу   
 
-Напомним, что уже реализовано:
+Что уже выполнено:
+- пункт 1 - не выполнено
+- пункт 2 - выполнено - полученные от сервера данные сохраняются в store
+- пункт 3 - выполнено - теперь home-компонент считывает данные только из store, никогда не обращаясь к серверу
+
+Напомним, каким путём было это достигнуто:
 - в момент, когда срабатывает переход на страницу *posts* - срабатывает **router post resolver**, который запускает **loadAllPosts action**, который информирует о том, что нужно начать загрузку постов с сервера
 - **loadPosts$ effect** ловит команду от **loadAllPosts action** и начинает загрузку постов с сервера
 - **loadPosts$ effect** запускает **allPostsLoaded action**, который информирует о том, что данные с сервера получены и можно с ними работать
 - **postsReducer** ловит команду от **allPostsLoaded action**, получает от него данные и сохраняет их в **store**
 - когда переход на страницу *posts* завершился - срабатывает home-компонент - внутри которого происходит извлечение данных из **store** с помощью **selectAllPosts** и **selectPostsNumber** селекторов
 
-Итак, что выполнено:
-- пункт 1 - теперь home-компонент считывает данные из store
-- пункт 3 - полученные от сервера данные сохраняются в store
-- пункт 4 - home-компонент считывает данные только из *store*
+Как видим, пункт 1 - не реализован, так как сейчас, когда срабатывает переход на страницу *posts*, каждый раз срабатывает *router post resolver*, который служит тригером для обращения к серверу.
 
-Как видим, пункт 2 - не реализован, так как сейчас, когда срабатывает переход на страницу *posts*, происходит обращение к серверу, тригером для которого послужил *router post resolver*.
-
-Задача урока - реализовать пункт 2.
+Задача урока - реализовать пункт 1.
 
