--- a/!_lessons/31. NGRX-5. Обращение к серверу только один раз.md
+++ b/!_lessons/31. NGRX-5. Обращение к серверу только один раз.md
@@ -41,21 +41,23 @@
 
 // );
 
-export const postsReducer = createReducer(
-	initialPostsState,
-	on(
-		PostsActions.allPostsLoaded,
+// export const postsReducer = createReducer(
+// 	initialPostsState,
+// 	on(
+// 		PostsActions.allPostsLoaded,
 		// Следующий метод 1м аргументом принимает предыдущий state, вторым - action,
 		// возвращает в store новую версию состояния в Entity State формате:
-		(state, action) => adapter.addMany(
-			action.posts, 
+		// (state, action) => adapter.addMany(
+		// 	action.posts, 
+
 			{
 				... state,
 				allPostsLoadedFlag: true
 			}
-		) 
-	)
-);
+
+// 		) 
+// 	)
+// );
 ```
 
 ### 2. Создание селектора arePostsLoaded
@@ -82,7 +84,6 @@ import { arePostsLoaded } from './posts.selectors';
 import { tap, first, finalize, filter } from "rxjs/operators";
 import { select, Store } from "@ngrx/store";
 
-// @Injectable()
 // export class PostsResolver implements Resolve<any> { 
 	// ...
 
