--- a/!_lessons/31. NGRX-5. Обращение к серверу только один раз.md
+++ b/!_lessons/31. NGRX-5. Обращение к серверу только один раз.md
@@ -17,13 +17,13 @@
 - **postsReducer** ловит команду от **allPostsLoaded action**, получает от него данные и сохраняет их в **store**
 - когда переход на страницу *posts* завершился - срабатывает home-компонент - внутри которого происходит извлечение данных из **store** с помощью **selectAllPosts** и **selectPostsNumber** селекторов
 
-Как видим, пункт 1 - не реализован, так как сейчас, когда срабатывает переход на страницу *posts*, каждый раз срабатывает *router post resolver*, который служит тригером для обращения к серверу.
+Как видим, пункт 1 - не реализован, так как сейчас, **когда срабатывает переход на страницу *posts*, каждый раз срабатывает *router post resolver***, который служит тригером для обращения к серверу.
 
 Задача урока - реализовать пункт 1.
 
 ### 1. Создание флага allPostsLoadedFlag
 
-Чтобы понимать, находятся ли в store данные постов или нет, создадим флаг allPostsLoadedFlag, которому будем присваивать значения true/false в зависимости от того - произошло ли обращение к серверу или нет.  
+Чтобы при переходе на страницу *posts*, каждый раз не срабатывал *router post resolver*, который служит тригером для обращения к серверу, мы создадим флаг allPostsLoadedFlag. С его помощью мы сможем понимать, находятся ли в store данные постов или нет, присваивая значения true/false.  
 
 *src\app\posts\reducers\posts.reducers.ts*:
 ```js
@@ -76,7 +76,7 @@ export const arePostsLoaded = createSelector(
 
 ### 3. Использование allPostsLoadedFlag
 
-Теперь можно использовать allPostsLoadedFlag флаг внутри *router post resolver*, чтобы понимать - тригерить экшен или нет.
+Теперь можно использовать allPostsLoadedFlag флаг внутри *router post resolver*, чтобы понимать - тригерить экшен, который будет получать данные от сервера, или нет.
 
 *src\app\posts\posts.resolver.ts*:
 ```js
@@ -84,29 +84,47 @@ import { arePostsLoaded } from './posts.selectors';
 import { tap, first, finalize, filter } from "rxjs/operators";
 import { select, Store } from "@ngrx/store";
 
-// export class PostsResolver implements Resolve<any> { 
-	// ...
+@Injectable()
+// Resolver сервисы необходимо наследовать от Resolve класса
+export class PostsResolver implements Resolve<any> { 
 
-	// resolve(route: ActivatedRouteSnapshot, state: RouterStateSnapshot): Observable<any> {
-	// 	return this.store.pipe(
+	loading = false;
 
-			// С помощью оператора select обращаем к селектору arePostsLoaded, который возвратит 
-			// значение флага allPostsLoadedFlag (true/false) в зависимости от того - были ли уже загружены курсы или нет.
+	constructor(
+		// Чтобы получить доступ к данным из хранилища - инжектим Store
+		private store: Store<AppState>
+	) {}
+
+	// Resolver сервис имеет один обязательный метод resolve(), который принимает несколько аргументов:
+	// - route: ActivatedRouteSnapshot - содержит иформацию об текущем url
+	// - state: RouterStateSnapshot - содержит текущий стейт роутера
+	resolve(route: ActivatedRouteSnapshot, state: RouterStateSnapshot): Observable<any> {
+		return this.store.pipe(
+			// С помощью оператора select обращаемся к селектору arePostsLoaded, который возвратит 
+			// значение флага allPostsLoadedFlag (true/false) в зависимости от того - были ли уже загружены посты или нет.
 			// Значение true/false будет получено в параметре postsLoaded следующего оператора tap
 			select(arePostsLoaded),
 
-			// tap(postsLoaded => {
-
+			tap(postsLoaded => {
+				// Если посты не загружены - запускаем loadAllPosts action, 
+				// который информирует о том, что нужно начать загрузку постов с сервера
 				if (!this.loading && !postsLoaded) {
+					this.loading = true;
+					// Вызов действия loadAllPosts()
+					this.store.dispatch(loadAllPosts());
+				}
+			}),
 
-			// 		this.loading = true;
-			// 		this.store.dispatch(loadAllPosts());
-			// 	}
-			// }),
-
+			// filter - возвращает значения, соответствующие указанному условию
 			filter(postsLoaded => postsLoaded),
 			
-			// ...
+			// Чтобы завершить роутинг, Observable метода resolve() должен быть завершен -
+			// вызываем метод first(), который возвратит первое полученное из потока значение,
+			// и завершит Observable
+			first(),
+
+			// finalize - вызов функции, когда Observable завершается или возникает ошибка
+			finalize(() => this.loading = false)
 		)
 	}
 }
