--- a/!_lessons/32. Material. Спинер.md
+++ b/!_lessons/32. Material. Спинер.md
@@ -1,4 +1,4 @@
-## 32. Спиннер
+## 32. Material спинер
 
 При успешной авторизации юзера (после нажатия клавиши 'Login'), а также при выборе поста (после нажатия клавиши 'VIEW'), происходят запросы к серверу на получение данных. В этот момент, на мгновение, мы видим пустой экран. Задача урока - отображать на экране спинер в момент ожидания ответа от сервера.
 
