--- a/!_lessons/33. Material. Кнопка.md
+++ b/!_lessons/33. Material. Кнопка.md
@@ -1,10 +1,10 @@
-## 32. Material кнопка
+## 33. Material кнопка
 
-Задача урока - на странице 'http://localhost:4200/posts', для каждого поста добавить кнопку, с помощью которой мы будем открывать окно для редактирования содержимого поста. 
+Задача урока - на странице 'http://localhost:4200/posts', для каждого поста добавить кнопку EDIT, с помощью которой мы будем открывать окно для редактирования содержимого поста. 
 
 ### 1. Подключаем angular/material в posts.module
 
-Подключаем модуль кнопок и иконок, которые будем использовать внутри кнопок *src\app\posts\posts.module.ts*:
+Подключаем модули кнопок и иконок, которые будем использовать внутри кнопок *src\app\posts\posts.module.ts*:
 ```js
 import { MatButtonModule } from '@angular/material/button';
 import { MatIconModule } from '@angular/material/icon';
