--- a/!_lessons/33. Material. Кнопка edit.md
+++ b/!_lessons/33. Material. Кнопка edit.md
@@ -1,4 +1,4 @@
-## 33. Material кнопка
+## 33. Material кнопка EDIT
 
 Задача урока - на странице 'http://localhost:4200/posts', для каждого поста добавить кнопку EDIT, с помощью которой мы будем открывать окно для редактирования содержимого поста. 
 
