--- a/!_lessons/34. Material. Окно редактирования поста.md
+++ b/!_lessons/34. Material. Окно редактирования поста.md
@@ -1,6 +1,6 @@
-## 34. Material 
+## 34. Material. Окно редактирования поста
 
-В предыдущем уроке, на страницу 'http://localhost:4200/posts', для каждого поста мы добавили кнопку EDIT, с помощью которой мы будем открывать окно для редактирования содержимого поста.  
+В предыдущем уроке, на странице 'http://localhost:4200/posts', для каждого поста мы добавили кнопку EDIT, с помощью которой мы будем открывать окно для редактирования содержимого поста.  
 **Задача этого урока - создать angular/material-окно для редактирования содержимого поста.**
 
 ### 1. Подключаем angular/material в posts.module
@@ -56,34 +56,34 @@ import { defaultDialogConfig } from '../../shared/default-dialog-config';
 
 export class PostsCardListComponent {
 
-	@Output() postChanged = new EventEmitter();
+  @Output() postChanged = new EventEmitter();
 
-	constructor(private dialog: MatDialog) {}
+  constructor(private dialog: MatDialog) {}
 
-	editPost(post: IPost) {
-		// В dialogConfig получаем базовые настройки нашего окна редактирования
-		const dialogConfig = defaultDialogConfig();
+  editPost(post: IPost) {
+    // В dialogConfig получаем базовые настройки нашего окна редактирования
+    const dialogConfig = defaultDialogConfig();
 
-		// Записываем в dialogConfig.data данные, которые мы хотим передать 
+    // Записываем в dialogConfig.data данные, которые мы хотим передать 
     // edit-post-dialog компоненту, который содержит material-модуль MatDialog
     // (https://material.angular.io/components/dialog/overview)
-		dialogConfig.data = {
-			dialogTitle: "Edit Course",
-			post
-		};
+    dialogConfig.data = {
+      dialogTitle: "Edit Course",
+      post
+    };
 
-		console.log('dialogConfig', dialogConfig);
-		
-		// Метод open - будет вызван, когда пользлватель откроет окно:
-		// 1й параметр - компонент, который необходимо отобразить при открытии окна
-		// 2й параметр - объект с настройками  и данными
-		// После того, как окно будет закрыто - сработает this.postChanged.emit() -
-		// данное событие будет отправленно вверх родительским компонентам и
-		// будет перехвачено в home-компоненте
-		this.dialog.open(EditPostDialogComponent, dialogConfig)
-			.afterClosed()
-			.subscribe(() => this.postChanged.emit());
-	}
+    console.log('dialogConfig', dialogConfig);
+
+    // Метод open - будет вызван, когда пользлватель откроет окно:
+    // 1й параметр - компонент, который необходимо отобразить при открытии окна
+    // 2й параметр - объект с настройками  и данными
+    // После того, как окно будет закрыто - сработает this.postChanged.emit() -
+    // данное событие будет отправленно вверх родительским компонентам и
+    // будет перехвачено в home-компоненте
+    this.dialog.open(EditPostDialogComponent, dialogConfig)
+      .afterClosed()
+      .subscribe(() => this.postChanged.emit());
+  }
 
 }
 ```
@@ -227,10 +227,9 @@ export class EditPostDialogComponent {
 export class PostsService {
   // ...
 
-	savePost(courseId: number | string, changes: Partial<IPost>) {
-		console.log('savePost', courseId)
-		console.log('savePost', changes)
-		return this.http.get<IPost[]>('https://jsonplaceholder.typicode.com/posts/');
-	}
+  savePost(courseId: number | string, changes: Partial<IPost>) {
+    // фейковый роут
+    return this.http.get<IPost[]>('https://jsonplaceholder.typicode.com/posts/');
+  }
 }
 ```
