--- a/!_lessons/35. NGRX-6. .md
+++ b/!_lessons/35. NGRX-6. .md
@@ -5,7 +5,7 @@
 
 ---
 
-В уроке 34 было создано окно, с помощью которого мы можем редактировать посты. Задача следующих нескольких уроков - редактировать данные в store и создать удобный User Experience, в результате которого пользователю, после того как он внесёт изменения в пост и нажмет кнопку сохранения, не нужно будет ожидать завершения процесса сохранения изменений на сервере. 
+В уроке 34 было создано окно, с помощью которого мы можем редактировать посты. Продолжим реализовывать дальнейшую логику того, что будет, когда пользователь нажал кнопку сохранения изменений.
 
 ### 1. Создание 'postUpdated' action
 
@@ -15,7 +15,8 @@
 ```js
 import { Update } from '@ngrx/entity';
 
-// postUpdated - это действие будет вызвано в 'src\app\posts\components\edit-post-dialog\edit-post-dialog.component.ts' в случае, когда пользователь нажмет кнопку сохранения в окне редактирования поста
+// postUpdated - это действие будет вызвано в 'src\app\posts\components\edit-post-dialog\edit-post-dialog.component.ts'
+// в случае, когда пользователь нажмет кнопку сохранения в окне редактирования поста
 export const postUpdated = createAction(
 	// Первое свойство type - задаем с учетом специальной naming-convention: 
 	// [Edit Post Dialog] - место, где происходит action
@@ -47,11 +48,11 @@ import { postUpdated } from '../../posts.actions';
 // ...
 export class EditPostDialogComponent {
 	// ...
-  constructor(
+	constructor(
 		// ...
 
-    // private postsService: PostsService // <-- обращение к postsService.savePost - удаляем
-    private store: Store<AppState>
+		// private postsService: PostsService // <-- обращение к postsService.savePost - удаляем
+		private store: Store<AppState>
 	) {}
 
 	// ...
@@ -61,16 +62,16 @@ export class EditPostDialogComponent {
 		// 	...this.post,
 		// 	...this.form.value
 		// };
-		
+
 		// Вместо того, чтобы обращаться к серверу после того, как пользователь изменил пост,
 		// мы будем диспатчить action 'postUpdated' (см. ниже), 
 		// поэтому обращение к postsService.savePost - удаляем
-		
+
 		/* // <-- delete
 		this.postsService.savePost(post.id, post) 
-		  .subscribe( 
-		    () => this.dialogRef.close()
-		  )
+			.subscribe( 
+				() => this.dialogRef.close()
+			)
 		*/
 
 		const update: Update<IPost> = {
