--- a/!_lessons/35. NGRX-6. Окно редактирования - action.md
+++ b/!_lessons/35. NGRX-6. Окно редактирования - action.md
@@ -1,4 +1,4 @@
-## 35.
+## 35. Окно редактирования - action
 
 В курсе NGRX-5 мы научились как сохранять данные в store в entity-формате.  
 В курсе NGRX-6 мы научимся как редактировать данные в store в entity-формате.  
