--- a/!_lessons/34. Material. Окно редактирования поста.md
+++ b/!_lessons/34. Material. Окно редактирования поста.md
@@ -69,7 +69,8 @@ export class PostsCardListComponent {
     // (https://material.angular.io/components/dialog/overview)
     dialogConfig.data = {
       dialogTitle: "Edit Course",
-      post
+      post,
+      mode: 'update'
     };
 
     console.log('dialogConfig', dialogConfig);
@@ -167,6 +168,7 @@ export class EditPostDialogComponent {
   form: FormGroup;
   dialogTitle: string;
   post: IPost;
+  mode: 'create' | 'update';
 
   constructor(
     private fb: FormBuilder,
@@ -183,6 +185,7 @@ export class EditPostDialogComponent {
   ) {
     this.dialogTitle = data.dialogTitle;
     this.post = data.post;
+    this.mode = data.mode;
 
     console.log('MAT_DIALOG_DATA', data)
 
@@ -191,12 +194,14 @@ export class EditPostDialogComponent {
       title: ['', Validators.required],
     };
 
-    this.form = this.fb.group(formControls);
+    if (this.mode == 'update') {
+      this.form = this.fb.group(formControls);
 
-    // Передаем методу patchValue объект, полученный из posts-card-list компонента.
-    // Несмотря на то, что объект содержит 4 поля - body, id, title, userId -
-    // метод patchValue берет из него только поля, описанные в formControls - id, title
-    this.form.patchValue({...data.post});
+      // Передаем методу patchValue объект, полученный из posts-card-list компонента.
+      // Несмотря на то, что объект содержит 4 поля - body, id, title, userId -
+      // метод patchValue берет из него только поля, описанные в formControls - id, title
+      this.form.patchValue({...data.post});
+    }
   }
 
   onClose() {
