--- a/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
+++ b/!_lessons/29. NGRX-5. entity state, adapter, reducer для posts-страницы.md
@@ -93,11 +93,12 @@ export const adapter = createEntityAdapter<IPost>();
 // переменная initialPostsState будет хранить пустой массив ids и пустой объект entities
 export const initialPostsState = adapter.getInitialState();
 
-// Создаем редюсер с помощью метода createReducer.
-// Данный рудюсер слушает allPostsLoaded action и он должен
-// сохранять посты в store в Entity State формате
+// Создаем редюсер с помощью метода createReducer
 export const postsReducer = createReducer(
 	initialPostsState,
+
+	// Данный редюсер слушает allPostsLoaded action и он должен
+	// сохранять посты в store в Entity State формате
 	on(
 		PostsActions.allPostsLoaded,
 		// Следующий метод 1м аргументом принимает предыдущий state, вторым - action,
