--- a/!_lessons/34. Material. Окно редактирования поста.md
+++ b/!_lessons/34. Material. Окно редактирования поста.md
@@ -1,7 +1,7 @@
 ## 34. Material. Окно редактирования поста
 
 В предыдущем уроке, на странице 'http://localhost:4200/posts', для каждого поста мы добавили кнопку EDIT, с помощью которой мы будем открывать окно для редактирования содержимого поста.  
-**Задача этого урока - создать angular/material-окно для редактирования содержимого поста.**
+**Задача этого урока - создать angular/material-окно для редактирования содержимого поста - а именно title и body поста**
 
 ### 1. Подключаем angular/material в posts.module
 
@@ -114,16 +114,15 @@ import { EditPostDialogComponent } from './components/edit-post-dialog/edit-post
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Id"
-          formControlName="id"
+          placeholder="Post Title"
+          formControlName="title"
         >
       </mat-form-field>
-
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Title"
-          formControlName="title"
+          placeholder="Post Body"
+          formControlName="body"
         >
       </mat-form-field>
     </ng-container>
@@ -190,8 +189,8 @@ export class EditPostDialogComponent {
     console.log('MAT_DIALOG_DATA', data)
 
     const formControls = {
-      id: ['', Validators.required],
       title: ['', Validators.required],
+      body: ['', Validators.required],
     };
 
     if (this.mode == 'update') {
@@ -199,7 +198,7 @@ export class EditPostDialogComponent {
 
       // Передаем методу patchValue объект, полученный из posts-card-list компонента.
       // Несмотря на то, что объект содержит 4 поля - body, id, title, userId -
-      // метод patchValue берет из него только поля, описанные в formControls - id, title
+      // метод patchValue берет из него только поля, описанные в formControls - title, body
       this.form.patchValue({...data.post});
     }
   }
