--- a/!_lessons/36. NGRX-6. Окно редактирования - reducer.md
+++ b/!_lessons/36. NGRX-6. Окно редактирования - reducer.md
@@ -1,6 +1,6 @@
 ## 36. Окно редактирования - reducer
 
-В предыдущем уроке, после того как пользователь изменил пост и нажал кнопку сохранения, мы задиспатчили action 'postUpdated' внутри edit-post-dialog компонента с целью оповещения об изменениях. Следующее что мы должны сделать - обновить состояние store. Для этого мы создадим reducer, который получит 'postUpdated' action и возвратит обновленное состояние. 
+В предыдущем уроке, после того как пользователь изменил пост и нажал кнопку сохранения, мы задиспатчили action 'postUpdated' внутри edit-post-dialog компонента с целью оповещения об изменениях. Следующее что мы должны сделать - обновить состояние store. Для этого мы создадим reducer, который получит 'postUpdated' action и возвратит обновленное состояние store. 
 
 Добавляем в *src\app\posts\reducers\posts.reducers.ts* новый редюсер:
 ```js
@@ -44,3 +44,14 @@ export const postsReducer = createReducer(
 	)
 )
 ```
+
+### Проверяем, что состояние store изменилось
+
+- Находясь на странице http://localhost:4200/posts нажимаем EDIT-кнопку поста (например правим пост 4)
+- Изменяем поля 'Post Title' и 'Post Body' и сохраняем
+- Переходим во вкладку 'devtools --> Redux --> Diff' и видим, что данные изменились:
+	![](./img/36.1.png)
+- Во вкладке 'devtools --> Redux --> State' видим измененные данные:
+	![](./img/36.2.png)
+- Также произойдет обновление данных на экране:
+	![](./img/36.3.png)
