--- a/!_lessons/34. Material. Окно редактирования поста.md
+++ b/!_lessons/34. Material. Окно редактирования поста.md
@@ -224,14 +224,14 @@ export class EditPostDialogComponent {
 
 ### 5. Создание метода savePost внутри postsService
 
-Внутри EditPostDialog компонента выполняется обращение к методу postsService.savePost, с помощью которого должно происходить обновление данных на сервере. Добавим этот метод, но его реализация будет завершена в будущем.
+Внутри EditPostDialog компонента выполняется обращение к методу postsService.savePost, с помощью которого должно происходить обновление данных на сервере. Добавим этот метод, но в этом курсе он ничего не будет обновлять, это просто фейковый метод.
 
 *src\app\posts\posts.service.ts*:
 ```js
 export class PostsService {
   // ...
 
-  savePost(courseId: number | string, changes: Partial<IPost>) {
+  savePost(postId: number | string, changes: Partial<IPost>) {
     // фейковый роут
     return this.http.get<IPost[]>('https://jsonplaceholder.typicode.com/posts/');
   }
