--- a/!_lessons/27. Отображение всех постов и выбранного поста.md
+++ b/!_lessons/27. Отображение всех постов и выбранного поста.md
@@ -37,9 +37,11 @@ export class PostsCardListComponent {
 
 <div *ngFor='let post of allPosts'>
 	<hr>
-	TITLE: {{ post.title }}
+	<h3>{{ post.description }}</h3>
+	<img style="width: 100px;" [src]="post?.iconUrl">
+	
 	<button
-		[routerLink]="['/posts', post.id]"
+		[routerLink]="['/posts', post.url]"
 	>VIEW</button>
 </div>
 ```
@@ -79,8 +81,8 @@ export class PostComponent {
 	) {}
 
 	ngOnInit() {
-		const postId = this.route.snapshot.paramMap.get("postId");
-		this.post$ = this.postsService.findPostById(postId);
+		const postUrl = this.route.snapshot.paramMap.get("postUrl");
+		this.post$ = this.postsService.findPostById(postUrl);
 	}
 }
 ```
@@ -89,7 +91,7 @@ export class PostComponent {
 ```html
 <div *ngIf="(post$ | async) as post">
 	<h3>UserId: {{ post.userId }}</h3>
-	<h3>PostId: {{ post.id }}</h3>
+	<h3>postUrl: {{ post.id }}</h3>
 	<h3>Title: {{ post.title }}</h3>
 	<h3>Post: {{ post.body }}</h3>
 </div>
@@ -98,8 +100,8 @@ export class PostComponent {
 Для данного компонента, необходимо создать метод *findPostById* внутри *postsService*, с помощью которого мы будем получать данные конкретного поста. 
 Добавляем в *src\app\posts\posts.service.ts*:
 ```js
-findPostById(postId: string): Observable<IPost> {
-	return this.http.get<IPost>(`https://jsonplaceholder.typicode.com/posts/${postId}`)
+findPostById(postUrl: string): Observable<IPost> {
+	return this.http.get<IPost>(`/api/courses/${postUrl}`);
 }
 ```
 
@@ -112,7 +114,7 @@ import { PostComponent } from './components/post/post.component';
 
 const postsRoutes: Routes = [
   // { path: '', component: HomeComponent },
-  { path: ':postId', component: PostComponent },
+  { path: ':postUrl', component: PostComponent },
 ];
 
 @NgModule({
