--- a/!_lessons/28. NGRX-5. resolver, actions, effect для posts-страницы.md
+++ b/!_lessons/28. NGRX-5. resolver, actions, effect для posts-страницы.md
@@ -66,7 +66,7 @@ const postsRoutes: Routes = [
 		} 
 	},
 
-  // { path: ':postId', component: PostComponent },
+  // { path: ':postUrl', component: PostComponent },
 ];
 
 // ...
