--- a/!_lessons/32. Material. Спинер.md
+++ b/!_lessons/32. Material. Спинер.md
@@ -92,8 +92,8 @@ export class PostComponent {
 	post$: Observable<IPost>;
 
 	ngOnInit() {
-		// const postId = this.route.snapshot.paramMap.get("postId");
-		// this.post$ = this.postsService.findPostById(postId);
+		// const postUrl = this.route.snapshot.paramMap.get("postUrl");
+		// this.post$ = this.postsService.findPostById(postUrl);
 
 		// Переводим значение в boolean:
 		// если в posts есть данные - получим true, если нет - false
