--- a/!_lessons/06. Отображение данных на странице posts.md
+++ b/!_lessons/06. Отображение данных на странице posts.md
@@ -16,7 +16,7 @@ export class PostsService {
 	constructor(private http: HttpClient) {}
 
 	findAllPosts(): Observable<IPost[]> {
-		return this.http.get<IPost[]>('https://jsonplaceholder.typicode.com/posts/')
+		return this.http.get<IPost[]>('/api/courses');
 	}
 }
 ```
@@ -68,10 +68,9 @@ export class HomeComponent {
 
 	reload() {		
 		this.allPosts$ = this.postsService.findAllPosts().pipe(
+			map(res => res['payload']),
 			tap(post => {
 				console.log('all posts ==>', post);
-
-				// В this.numb получаем колличество четных постов 
 				this.numb = post.filter((item, i, arr) => i % 2 === 0).length;
 			})
 		)
