--- a/!_lessons/34. Material. Окно редактирования поста.md
+++ b/!_lessons/34. Material. Окно редактирования поста.md
@@ -114,15 +114,15 @@ import { EditPostDialogComponent } from './components/edit-post-dialog/edit-post
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Title"
-          formControlName="title"
+          placeholder="Category"
+          formControlName="category"
         >
       </mat-form-field>
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Body"
-          formControlName="body"
+          placeholder="Description"
+          formControlName="description"
         >
       </mat-form-field>
     </ng-container>
@@ -189,16 +189,16 @@ export class EditPostDialogComponent {
     console.log('MAT_DIALOG_DATA', data)
 
     const formControls = {
-      title: ['', Validators.required],
-      body: ['', Validators.required],
+      category: ['', Validators.required],
+      description: ['', Validators.required],
     };
 
     if (this.mode == 'update') {
       this.form = this.fb.group(formControls);
 
       // Передаем методу patchValue объект, полученный из posts-card-list компонента.
-      // Несмотря на то, что объект содержит 4 поля - body, id, title, userId -
-      // метод patchValue берет из него только поля, описанные в formControls - title, body
+      // Несмотря на то, что объект содержит много полей -
+      // метод patchValue берет из него только поля, описанные в formControls - category, description
       this.form.patchValue({...data.post});
     }
   }
@@ -224,16 +224,15 @@ export class EditPostDialogComponent {
 
 ### 5. Создание метода savePost внутри postsService
 
-Внутри EditPostDialog компонента выполняется обращение к методу postsService.savePost, с помощью которого должно происходить обновление данных на сервере. Добавим этот метод, но в этом курсе он ничего не будет обновлять, это просто фейковый метод.
+Внутри EditPostDialog компонента выполняется обращение к методу postsService.savePost, с помощью которого должно происходить обновление данных на сервере.
 
 *src\app\posts\posts.service.ts*:
 ```js
 export class PostsService {
   // ...
 
-  savePost(postId: number | string, changes: Partial<IPost>) {
-    // фейковый роут
-    return this.http.get<IPost[]>('https://jsonplaceholder.typicode.com/posts/');
-  }
+	savePost(courseId: number | string, changes: Partial<IPost>) {
+		return this.http.put('/api/course/' + courseId, changes);
+	}
 }
 ```
