--- a/!_lessons/01. Создание angular проекта.md
+++ b/!_lessons/01. Создание angular проекта.md
@@ -10,3 +10,6 @@
 
 - Запускаем проект на http://localhost:4200:  
   `npm start`
+
+- Запускаем сервер на http://localhost:9000:  
+  `npm run server`
