--- a/!_lessons/06. Отображение данных на странице posts.md
+++ b/!_lessons/06. Отображение данных на странице posts.md
@@ -26,10 +26,27 @@ export class PostsService {
 Создаем файл _src\app\posts\model\post.model.ts_
 ```js
 export interface IPost {
-	userId: string;
-	id: string;
-	title: string;
-	body: string;
+  id: number;
+  seqNo:number;
+  url:string;
+  iconUrl: string;
+  courseListIcon: string;
+  description: string;
+  longDescription?: string;
+  category: string;
+  lessonsCount: number;
+  promo: boolean;
+}
+
+export function compareCourses(c1: IPost, c2: IPost) {
+  const compare = c1.seqNo - c2.seqNo;
+  if (compare > 0) {
+    return 1;
+  }
+  else if ( compare < 0) {
+    return -1;
+  }
+  else return 0;
 }
 ```
 
