--- a/!_lessons/06. Отображение данных на странице posts.md
+++ b/!_lessons/06. Отображение данных на странице posts.md
@@ -69,7 +69,7 @@ import { PostsService } from "./posts.service";
 import { PostsService } from '../../posts.service';
 import { Observable } from "rxjs";
 import { tap } from "rxjs/operators";
-import { IPost } from "../../model/post.model";
+import { IPost, compareCourses } from "../../model/post.model";
 
 export class HomeComponent {
 	allPosts$: Observable<IPost[]>;
@@ -86,6 +86,7 @@ export class HomeComponent {
 	reload() {		
 		this.allPosts$ = this.postsService.findAllPosts().pipe(
 			map(res => res['payload']),
+			map(courses => courses.sort(compareCourses)),
 			tap(post => {
 				console.log('all posts ==>', post);
 				this.numb = post.filter((item, i, arr) => i % 2 === 0).length;
