--- a/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
+++ b/!_lessons/30. NGRX-5. Извлечение постов с помощью selectors .md
@@ -114,6 +114,7 @@ export class HomeComponent {
 		// Старую логику удаляем
 		// this.allPosts$ = this.postsService.findAllPosts().pipe(
 		// 	map(res => res['payload']),
+		// map(courses => courses.sort(compareCourses)),
 		// 	tap(post => {
 		// 		console.log('all posts ==>', post);
 		// 		this.numb = post.filter((item, i, arr) => i % 2 === 0).length;
