--- a/!_lessons/38. NGRX-7. NgRx Data, entityMetadata, entityService.md
+++ b/!_lessons/38. NGRX-7. NgRx Data, entityMetadata, entityService.md
@@ -1,10 +1,10 @@
 # NGRX-7
 
-Как мы видим, при работе с NgRx нам приходится писать очень много повторяющегося кода. Чтобы облегчить нашу работу, в разделе NGRX-7 мы изучим пакет 'NgRx Data'.
+При работе с NgRx нам приходится писать очень много повторяющегося кода. Чтобы облегчить нашу работу, в разделе NGRX-7 мы изучим пакет 'NgRx Data'.
 
 ---
 
-## 38. NgRx Data
+## 38. NGRX-7. NgRx Data, entityMetadata, entityService
 
 **NgRx Data** - пакет (абстракция над Store, Effects и Entity), с помощью которого можно легко управлять entity-данными в Store, который радикально сокращает объем кода, который вы пишете. Как и в случае с любой абстракцией, при достижении простоты вы теряете возможность прямого взаимодействия с библиотекой NgRx.
 
