--- a/!_lessons/37. NGRX-6. Окно редактирования - effect.md
+++ b/!_lessons/37. NGRX-6. Окно редактирования - effect.md
@@ -1,4 +1,4 @@
-## 36. Окно редактирования - 
+## 36. Окно редактирования - effect
 
 На данном этапе мы уже можем редактировать данные выбранного поста и сохранять их в store в entity-формате. Все что нам осталось - это создать эффект, с помощью которого мы сможем отправлять на бэкграунде измененные данные на сервер. 
 
