--- a/!_lessons/43. NGRX-7. Добавление данных.md
+++ b/!_lessons/43. NGRX-7. Добавление данных.md
@@ -126,7 +126,8 @@ export class EditPostDialogComponent {
       // Метод add входит в состав EntityService - он выполняет post-запросы к серверу
       // (add строит url запроса по специальной конвенции - но в нашем случаи
       // - необходимо задать кастомный url - см. post-data.service),
-      // и сохраняет обновленные данные в store
+      // и сохраняет обновленные данные в store.
+      // По умолчанию add - pesimistic метод.
       this.postsEntityService.add(post)
         .subscribe(
           newPost => {
