--- a/!_lessons/27. Отображение всех постов и выбранного поста.md
+++ b/!_lessons/27. Отображение всех постов и выбранного поста.md
@@ -39,10 +39,10 @@ export class PostsCardListComponent {
 	<hr>
 	<h3>{{ post.description }}</h3>
 	<img style="width: 100px;" [src]="post?.iconUrl">
-	
-	<button
-		[routerLink]="['/posts', post.url]"
-	>VIEW</button>
+
+	<button mat-raised-button color="primary" [routerLink]="['/posts', post.url]">
+		VIEW
+	</button>
 </div>
 ```
 
