--- a/!_lessons/38. NGRX-7. NgRx Data, entityMetadata, entityService.md
+++ b/!_lessons/38. NGRX-7. NgRx Data, entityMetadata, entityService.md
@@ -37,8 +37,8 @@ import { EntityDataModule } from '@ngrx/data';
 ```js
 import { EntityDefinitionService, EntityMetadataMap } from '@ngrx/data';
 
-// Создаем конфигурацию для Post-entity.
-// Этот объект будет содержать по одной записи для каждой сущности в нашем приложении
+// Создаем entity-конфигурацию для Post-модуля.
+// Этот объект будет содержать entity-сущности, используемые в приложении
 const entityMetadata: EntityMetadataMap = {
   // Сущность Post
   Post: {
