--- a/!_lessons/42. NGRX-7. Редактирование данных.md
+++ b/!_lessons/42. NGRX-7. Редактирование данных.md
@@ -76,8 +76,8 @@ Pesimistic updates:
 
 *src\app\posts\posts.module.ts*:
 ```js
-// // Создаем конфигурацию для Post-entity.
-// // Этот объект будет содержать по одной записи для каждой сущности в нашем приложении
+// // Создаем entity-конфигурацию для Post-модуля.
+// // Этот объект будет содержать entity-сущности, используемые в приложении
 // const entityMetadata: EntityMetadataMap = {
 //   // Сущность Post
 // 	Post: {
