--- a/!_lessons/46. NGRX-7. Пагинация.md
+++ b/!_lessons/46. NGRX-7. Пагинация.md
@@ -1,3 +1,73 @@
+## 46. Пагинация 
+
+При клике на кнопку VIEW одного из постов на странице http://localhost:4200/posts мы переходим на страницу с детальной информацией о посте, например http://localhost:4200/posts/ngrx-course. Задача данного урока - добавить на эту страницу с детальной информацией - отображение списка уроков с пагинацией:    
+
+![](./img/46.1.png)    
+
+### 1. Добавляем angular-material верстку 
+
+С помощью angular-material необходимо добавить на страницу верстку как на картинке выше.      
+
+Добавляем в *src\app\posts\components\post\post.component.html*:
+```html
+<!-- <div *ngIf="(post$ | async) as post"> -->
+	<!-- 
+	<h3>{{ post?.description }}</h3>
+	<h3>{{ post?.category }} level</h3>
+	<h3>{{ post?.longDescription }}</h3>
+	<img [src]="post?.iconUrl"> 
+	-->
+
+	<mat-table class="mat-elevation-z8" [dataSource]="lessons$ | async">
+		<ng-container matColumnDef="seqNo">
+			<mat-header-cell *matHeaderCellDef>#</mat-header-cell>
+			<mat-cell *matCellDef="let post">{{post.seqNo}}</mat-cell>
+		</ng-container>
+		<ng-container matColumnDef="description">
+			<mat-header-cell *matHeaderCellDef>Description</mat-header-cell>
+			<mat-cell *matCellDef="let post">{{post.description}}</mat-cell>
+		</ng-container>
+		<ng-container matColumnDef="duration">
+			<mat-header-cell *matHeaderCellDef>Duration</mat-header-cell>
+			<mat-cell *matCellDef="let post">{{post.duration}}</mat-cell>
+		</ng-container>
+		<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+		<mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+	</mat-table>
+
+	<button 
+		mat-raised-button 
+		color="accent"
+		(click)="loadLessonsPage(post)"
+	>Load More</button>
+
+<!-- </div> -->
+
+<!-- При true - спинер должен отображаться -->
+<div class="spinner-container" *ngIf="(loading$ | async)">
+	<mat-spinner></mat-spinner>
+</div>
+```
+
+Чтобы реализовать верстку выше, подключим необходимые angular-material компоненты в *src\app\posts\posts.module.ts*:  
+```js
+import { MatTableModule } from '@angular/material/table';
+import { MatPaginatorModule } from '@angular/material/paginator';
+
+@NgModule({
+	imports: [
+    // ...
+		MatTableModule,
+		MatPaginatorModule,
+  ],
+  // ...
+})
+```
+
+### 2. Добавляем логику отображения списка уроков с пагинацией
+
+*src\app\posts\components\post\post.component.ts*:
+```js
 import { Component } from "@angular/core";
 import { ActivatedRoute } from '@angular/router';
 import { Observable } from 'rxjs';
@@ -101,3 +171,4 @@ export class PostComponent {
 	}
 
 }
+```
